deploy/file-share/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: files
  labels:
    app.kubernetes.io/name: file-share
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
